# rocket-static-files

./: Cargo.toml  README.md
src/: fairing.rs  gen.rs  lib.rs
