[package]
name = "rocket-static-files"
version = "0.1.0"
authors = ["Vypo Mouse <vypo@vypo.dev>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "Serve static files with cache headers with Rocket"
repository = "https://github.com/vypo/rocket-static-files"
keywords = ["rocket", "serve", "http", "static"]
categories = [
    "caching",
    "development-tools::build-utils",
    "web-programming",
]

[features]
gen = ["walkdir", "phf_codegen", "siphasher", "base64"]

[dependencies]
rocket = "0.4"
phf = "0.8"
snafu = "0.6"
mime_guess = "2.0"
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.walkdir]
version = "2"
optional = true

[dependencies.phf_codegen]
version = "0.8"
optional = true

[dependencies.siphasher]
version = "0.3"
optional = true

[dependencies.base64]
version = "0.13"
optional = true
